--- a/Portfolio/android/Androidportfolio.html
+++ b/Portfolio/android/Androidportfolio.html
@@ -190,7 +190,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2022</small></div>
+            <div class="container"><small>Copyright &copy; 2022. 손병욱. All rights reserved.</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
